# blueterm

./: .env.example  .gitignore  CLAUDE.md  DEVELOPMENT.md  README.md  SESSION_2_SUMMARY.md  TROUBLESHOOTING.md  mise.toml  pyproject.toml  test_blueterm.sh
.prompt-extraction/: quick-start.md  session-4-status.md  session-status.md
src/blueterm/: __main__.py  app.py  config.py
src/blueterm/api/: __init__.py  client.py  code_engine_client.py  exceptions.py  iks_client.py  models.py  resource_manager_client.py  roks_client.py
src/blueterm/screens/: code_engine_project_detail_screen.py  confirm_screen.py  detail_screen.py  error_screen.py  resource_group_selection_screen.py
src/blueterm/styles/: app.tcss
src/blueterm/widgets/: __init__.py  action_bar.py  detail_panel.py  info_bar.py  instance_table.py  region_selector.py  resource_group_selector.py  resource_type_selector.py  search_input.py  status_bar.py  top_navigation.py
tests/: test_instance_table.py
